--- a/Profile/templates/index.html
+++ b/Profile/templates/index.html
@@ -67,7 +67,7 @@ Bootstrap 5 Form Pack Template
                             </ul>
 
                             <div>
-                                <a href="#" class="custom-btn custom-border-btn btn" data-bs-toggle="modal" data-bs-target="#subscribeModal">Notify me
+                                <a href="{{ url_for('logout',id=user_id)}}" class="custom-btn custom-border-btn btn" ">Log Out
                                     <i class="bi-arrow-right ms-2"></i>
                                 </a>
                             </div>
